<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bckgrnd1">

<LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="40dp"
    	android:layout_marginBottom="10dip"
		android:textAppearance="@style/HeaderText"
    	android:background="#000000"
        android:gravity="center"
        android:text="@string/configure_intro" 
        android:layout_gravity="center_horizontal"/>
    
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
	    android:layout_marginLeft="15dip"
	    android:layout_marginRight="10dip"
        android:id="@+id/update_rate">
        <TextView
            android:id="@+id/TextView01"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/configure_update"></TextView>
        <EditText
            android:layout_width="100dip"
            android:layout_height="wrap_content"
	    	android:gravity="right"
            android:layout_alignParentRight="true"
            android:id="@+id/update_rate_entry"
            android:inputType="number"
            />
    </RelativeLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="55dip"
        android:layout_marginRight="10dip"
        android:layout_marginBottom="10dip"
        android:textSize="14dip"
        android:layout_gravity="right|center_vertical"
        android:text="@string/update_rate_tip"
        />
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
	    android:layout_marginLeft="10dip"
	    android:layout_marginRight="10dip"
    	android:layout_marginBottom="10dip"
    	android:orientation="vertical"
		>
	    <RelativeLayout
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	    	android:orientation="horizontal"
			>
			<Button
			    android:layout_width="wrap_content" 
			    android:layout_height="wrap_content"
            	android:layout_alignParentLeft="true"
			    android:id="@+id/config_pick_folder"
			    android:background="@drawable/folder"
		    />
			<TextView  
			    android:layout_width="fill_parent" 
			    android:layout_height="wrap_content" 
				android:gravity="right"
            	android:layout_centerVertical="true"
            	android:layout_alignParentRight="true"
			    android:id="@+id/config_folder_path_hint"
			    android:text="@string/no_image_picked"
		    />
		</RelativeLayout>
		<TextView  
		    android:layout_width="fill_parent" 
		    android:layout_height="wrap_content" 
	    	android:layout_marginLeft="20dip"
	    	android:textSize="16dip"
			android:gravity="left"
			android:singleLine="false"
		    android:id="@+id/config_folder_path"
	    />
	</LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:layout_marginLeft="15dip"
        android:layout_marginRight="10dip"
        android:layout_marginBottom="10dip"
        android:orientation="horizontal"
        >
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="left|center_vertical"
	        android:text="@string/configure_frame_background"
	        />
	    <Spinner 
	        android:id="@+id/select_frame_background"
	        android:layout_width="0dip"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:layout_marginLeft="10dip"
	       
	        android:layout_gravity="right|center_vertical"
	        android:prompt="@string/configure_frame_background"
	    />
    </LinearLayout>
    <Button
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
	    android:layout_marginTop="10dip"
	    android:layout_marginLeft="50dip"
	    android:layout_marginRight="50dip"
		android:id="@+id/save_button"
		android:background="@drawable/save1" />
</LinearLayout>
</ScrollView>